[package]
name = "multi_log"
description = "Logger which passes messages on to any number of other loggers."
version = "0.1.0"
repository = "https://github.com/davechallis/multi_log"
keywords = ["logging", "log", "logger"]
license = "MIT"
authors = ["Dave Challis <suicas@gmail.com>"]

[dependencies]
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
env_logger = "0.5"
simplelog = "0.5"
